<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SayacActivity">

  <Button
      android:id="@+id/eksibutonu"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/eksi"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.08"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.632" />

  <Button
      android:id="@+id/artibutonu"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/artı"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.913"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.632" />

  <TextView
      android:id="@+id/sayacText"
      android:layout_width="158dp"
      android:layout_height="77dp"
      android:text="@string/Sayac"
      android:textAlignment="center"
      android:textSize="24sp"
      android:textStyle="italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.411" />

  <Button
      android:id="@+id/ayarlarbutonu"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/Ayarlar_Buton"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.883"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.067" />
</androidx.constraintlayout.widget.ConstraintLayout>